--- a/XFormDiscovery603B/XFormDiscovery603B.Droid/Properties/AndroidManifest.xml
+++ b/XFormDiscovery603B/XFormDiscovery603B.Droid/Properties/AndroidManifest.xml
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android" package="XFormDiscovery603B.Droid" android:installLocation="auto">
 	<uses-sdk android:minSdkVersion="15" />
-	<application></application>
+	<uses-permission android:name="android.permission.CALL_PHONE" />
+	<application android:label="XFormDiscovery603B"></application>
 </manifest>
