--- a/XFormDiscovery603B/XFormDiscovery603B.Droid/Properties/AndroidManifest.xml
+++ b/XFormDiscovery603B/XFormDiscovery603B.Droid/Properties/AndroidManifest.xml
@@ -1,6 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android" package="XFormDiscovery603B.Droid" android:installLocation="auto">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android" package="XFormDiscovery603B_Droid_New.XFormDiscovery603B_Droid_New" android:installLocation="auto">
 	<uses-sdk android:minSdkVersion="15" />
 	<uses-permission android:name="android.permission.CALL_PHONE" />
-	<application android:label="XFormDiscovery603B" android:theme="@style/android:Theme.Holo.Light"></application>
+	<application android:label="XFormDiscovery603B_New" android:theme="@style/android:Theme.Holo.Light"></application>
 </manifest>
